# sample-aws-india-compliance-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  constraints.txt  pyproject.toml  requirements.txt
.github/workflows/: regulatory-check.yml
conformance-packs/: CERTIN-Conformance-Pack.yaml  ConformancePack-Validation.docx  DPDP-Act-Conformance-Pack.yaml  RBI-Conformance-Pack.yaml  SEBI-Conformance-Pack.yaml  VALIDATION.md
scripts/: check_regulatory_updates.py
src/aws_india_compliance/: __init__.py  assessment.py  aws_scanner.py  conformance_pack.py  control_mappings.json  control_tower.py  docx_formatter.py  domains.py  knowledge.py  parsers.py  report_formatter.py  server.py
tests/: test_assessment.py  test_aws_scanner.py  test_control_tower.py  test_domains.py  test_parsers.py
