[project]
name = "aws-india-compliance"
version = "0.1.0"
description = "MCP server to assess AWS infrastructure against India's DPDP Act 2023 and RBI Master Direction on IT Governance 2023"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "mcp>=1.23.0",
    "boto3>=1.26.0",
    "defusedxml>=0.7.1",
    "python-docx>=1.0.0",
]

[project.scripts]
aws-india-compliance = "aws_india_compliance.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_india_compliance"]
